# Nukkit

./: .gitignore  README.md  settings.gradle.kts
native/: build.gradle.kts
native/src/main/c/: CMakeLists.txt  zlib_native.c
native/src/main/java/cn/nukkit/natives/: NativeLibraryLoader.java  ZlibNative.java
server/: build.gradle.kts
server/src/main/java/cn/nukkit/: Nukkit.java  Server.java
server/src/main/java/cn/nukkit/block/: Block.java  BlockButton.java  BlockButtonStone.java  BlockSlabStone.java
server/src/main/java/cn/nukkit/console/: NukkitConsole.java  NukkitConsoleAccepter.java
server/src/main/java/cn/nukkit/entity/: EntityHuman.java
server/src/main/java/cn/nukkit/inventory/: CraftingManager.java
server/src/main/java/cn/nukkit/item/: Item.java
server/src/main/java/cn/nukkit/level/: Explosion.java
server/src/main/resources/lang/: language.list
server/src/main/resources/lang/bra/: lang.ini  nukkit.yml
server/src/main/resources/lang/eng/: lang.ini  nukkit.yml
src/main/java/cn/nukkit/: Nukkit.java  Player.java  Server.java
src/main/java/cn/nukkit/block/: Block.java  BlockButtonWooden.java  BlockCocoa.java  BlockDoubleSlabStone.java  BlockRedSandstone.java  BlockSlabRedSandstone.java  BlockSlabWood.java  BlockStairsRedSandstone.java
src/main/java/cn/nukkit/blockentity/: BlockEntityBrewingStand.java
src/main/java/cn/nukkit/inventory/: CraftingManager.java
src/main/java/cn/nukkit/level/: Level.java
src/main/java/cn/nukkit/math/: BlockVector3.java
src/main/java/cn/nukkit/scheduler/: ServerScheduler.java
(+6 files in other folders)
